bdr.BDR2.scala.error
Erreur de compilation :
BDR2:18: error: not found: type recule
      case "W" => recule();recule();recule():recule
                                             ^